fix: find endpoints to properly accept collection queries
